--- a/Saved/Config/Windows/EditorUserSettings.ini
+++ b/Saved/Config/Windows/EditorUserSettings.ini
@@ -368,7 +368,7 @@ CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=40.000 Y=9.000
-WindowSize=X=1310.000 Y=738.000
+WindowSize=X=1320.000 Y=738.000
 InitiallyMaximized=True
 
 [ContentBrowser]
@@ -430,5 +430,8 @@ StaticMeshActor.Layers=True
 
 [MessageLog]
 LastLogListing=EditorErrors
+
+[MRU]
+MRUItem0=C:/Users/AK/Documents/unreal projects/anothergit/Content/kkk.umap
 
 
