--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,3 +1,15 @@
 [URL]
 GameName=AnotherGit
 
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Engine/Maps/Templates/Template_Default
+EditorStartupMap=/Game/kkk
+TransitionMap=
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+GameDefaultMap=/Engine/Maps/Entry
+GameDefaultMap=/Game/kkk
+GlobalDefaultServerGameMode=None
+
+
