--- a/Saved/Config/Windows/EditorUserSettings.ini
+++ b/Saved/Config/Windows/EditorUserSettings.ini
@@ -362,13 +362,17 @@ HTTP.TimeStamp=2014.09.19-04.28.27
 HTTP.LastCompileMethod=Unknown
 GitSourceControl.TimeStamp=2014.08.15-12.53.08
 GitSourceControl.LastCompileMethod=Unknown
+AndroidDeviceDetection.TimeStamp=2014.09.19-04.28.17
+AndroidDeviceDetection.LastCompileMethod=Unknown
+ExternalImagePicker.TimeStamp=2014.09.19-04.28.26
+ExternalImagePicker.LastCompileMethod=Unknown
 
 [AssetEditorManager]
 CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=40.000 Y=9.000
-WindowSize=X=1320.000 Y=738.000
+WindowSize=X=1350.000 Y=738.000
 InitiallyMaximized=True
 
 [ContentBrowser]
@@ -382,7 +386,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=
+ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ThumbnailScale=0.000000
@@ -399,7 +403,7 @@ FourPanes2x2.Viewport 1.bIsImmersive=False
 FourPanes2x2.Viewport 1.MaximizedViewportID=1
 
 [Directories2]
-UNR=../../../../../../Users/AK/Documents/Unreal Projects/AnotherGit/Content/
+UNR=../../../../../../Users/AK/Documents/Unreal Projects/AnotherGit/Content
 Brush=../../../../../../Users/AK/Documents/Unreal Projects/AnotherGit/Content/
 FBX=../../../../../../Users/AK/Documents/Unreal Projects/AnotherGit/Content/
 FBXAnim=../../../../../../Users/AK/Documents/Unreal Projects/AnotherGit/Content/
@@ -409,7 +413,7 @@ GenericOpen=../../../../../../Users/AK/Documents/Unreal Projects/AnotherGit/Cont
 GenericSave=../../../../../../Users/AK/Documents/Unreal Projects/AnotherGit/Content/
 MeshImportExport=../../../../../../Users/AK/Documents/Unreal Projects/AnotherGit/Content/
 WorldRoot=../../../../../../Users/AK/Documents/Unreal Projects/AnotherGit/Content/
-Level=../../../../../../Users/AK/Documents/Unreal Projects/AnotherGit/Content/
+Level=../../../../../../Users/AK/Documents/Unreal Projects/AnotherGit/Content
 Project=C:/Program Files/Unreal Engine/4.4/
 
 [/Script/UnrealEd.ContentBrowserSettings]
@@ -427,6 +431,13 @@ StaticMeshActor.Rendering=True
 StaticMeshActor.Actor=True
 StaticMeshActor.Blueprint=True
 StaticMeshActor.Layers=True
+GeneralProjectSettings.Publisher=True
+GeneralProjectSettings.About=True
+GeneralProjectSettings.Legal=True
+GameMapsSettings.DefaultMaps=True
+GameMapsSettings.LocalMultiplayer=True
+GameMapsSettings.DefaultModes=True
+GameMapsSettings.GameInstance=True
 
 [MessageLog]
 LastLogListing=EditorErrors
