--- a/Saved/Config/Windows/SourceControlSettings.ini
+++ b/Saved/Config/Windows/SourceControlSettings.ini
@@ -1,5 +1,5 @@
 [SourceControl.SourceControlSettings]
-Provider=Git
+Provider=None
 
 [GitSourceControl.GitSourceControlSettings]
 BinaryPath=C:\UE4\Engine\Binaries\ThirdParty\git\bin\git.exe
