--- a/Saved/Config/CleanSourceConfigs/Engine.ini
+++ b/Saved/Config/CleanSourceConfigs/Engine.ini
@@ -2,11 +2,16 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameInstanceClass=/Script/Engine.GameInstance
-EditorStartupMap=/Engine/Maps/Templates/Template_Default
-GameDefaultMap=/Engine/Maps/Entry
+EditorStartupMap=/Game/kkk
+GameDefaultMap=/Game/kkk
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Script/Engine.GameMode
 LocalMapOptions=
+TransitionMap=
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+GlobalDefaultServerGameMode=None
 
 [URL]
 GameName=AnotherGit
@@ -1146,9 +1151,9 @@ MaxObjectsNotConsideredByGC=0
 SizeOfPermanentObjectPool=0
 AsyncIOBandwidthLimit=0
 Paths=../../../Engine/Content
-Paths=../../../../../../Users/AK/Documents/unreal projects/anothergit/Content
+Paths=../../../../../../Users/AK/Documents/Unreal Projects/AnotherGit/Content
 Paths=../../../Engine/Plugins/Experimental/Paper2D/Content
-CutdownPaths=../../../../../../Users/AK/Documents/unreal projects/anothergit/CutdownPackages
+CutdownPaths=../../../../../../Users/AK/Documents/Unreal Projects/AnotherGit/CutdownPackages
 ZeroEngineVersionWarning=True
 UseStrictEngineVersioning=True
 
@@ -1209,7 +1214,7 @@ BoostPlayerTextures=3.0
 PoolSizeVRAMPercentage=70
 
 [/Script/UnrealEd.EditorEngine]
-AutoSaveDir=../../../../../../Users/AK/Documents/unreal projects/anothergit/Saved/Autosaves
+AutoSaveDir=../../../../../../Users/AK/Documents/Unreal Projects/AnotherGit/Saved/Autosaves
 LocalPlayerClassName=/Script/Engine.LocalPlayer
 bSubtitlesEnabled=True
 GameCommandLine=-log
@@ -1650,11 +1655,11 @@ MinimumDaysToKeepFile=7
 Root=(Type=KeyLength, Length=120, Inner=AsyncPut)
 AsyncPut=(Type=AsyncPut, Inner=Hierarchy)
 Hierarchy=(Type=Hierarchical, Inner=Boot, Inner=Pak, Inner=EnginePak, Inner=Local, Inner=Shared)
-Boot=(Type=Boot, Filename="../../../../../../Users/AK/Documents/unreal projects/anothergit/DerivedDataCache/Boot.ddc", MaxCacheSize=512)
+Boot=(Type=Boot, Filename="../../../../../../Users/AK/Documents/Unreal Projects/AnotherGit/DerivedDataCache/Boot.ddc", MaxCacheSize=512)
 Local=(Type=FileSystem, ReadOnly=false, Clean=false, Flush=false, PurgeTransient=true, DeleteUnused=true, UnusedFileAge=34, FoldersToClean=-1, Path=../../../Engine/DerivedDataCache, EnvPathOverride=UE-LocalDataCachePath)
 Shared=(Type=FileSystem, ReadOnly=false, Clean=false, Flush=false, DeleteUnused=true, UnusedFileAge=23, FoldersToClean=-1, Path=?EpicDDC, EnvPathOverride=UE-SharedDataCachePath)
 AltShared=(Type=FileSystem, ReadOnly=true, Clean=false, Flush=false, DeleteUnused=true, UnusedFileAge=23, FoldersToClean=-1, Path=?EpicDDC2, EnvPathOverride=UE-SharedDataCachePath2)
-Pak=(Type=ReadPak, Filename="../../../../../../Users/AK/Documents/unreal projects/anothergit/DerivedDataCache/DDC.ddp")
+Pak=(Type=ReadPak, Filename="../../../../../../Users/AK/Documents/Unreal Projects/AnotherGit/DerivedDataCache/DDC.ddp")
 EnginePak=(Type=ReadPak, Filename=../../../Engine/DerivedDataCache/DDC.ddp)
 
 [DerivedDataBackendGraph_Fill_Seattle]
@@ -1662,10 +1667,10 @@ MinimumDaysToKeepFile=7
 Root=(Type=KeyLength, Length=120, Inner=AsyncPut)
 AsyncPut=(Type=AsyncPut, Inner=Hierarchy)
 Hierarchy=(Type=Hierarchical, Inner=Boot, Inner=Pak, Inner=EnginePak, Inner=Local, Inner=Seattle)
-Boot=(Type=Boot, Filename="../../../../../../Users/AK/Documents/unreal projects/anothergit/DerivedDataCache/Boot.ddc", MaxCacheSize=512)
+Boot=(Type=Boot, Filename="../../../../../../Users/AK/Documents/Unreal Projects/AnotherGit/DerivedDataCache/Boot.ddc", MaxCacheSize=512)
 Local=(Type=FileSystem, ReadOnly=false, Clean=false, Flush=false, PurgeTransient=true, DeleteUnused=true, UnusedFileAge=34, FoldersToClean=-1, Path=../../../Engine/DerivedDataCache)
 Seattle=(Type=FileSystem, ReadOnly=false, Clean=false, Flush=false, DeleteUnused=true, UnusedFileAge=23, FoldersToClean=-1, Path=\\sea.epicgames.net\root\DDC, EnvPathOverride=UE-SharedDataCachePath_Seattle)
-Pak=(Type=ReadPak, Filename="../../../../../../Users/AK/Documents/unreal projects/anothergit/DerivedDataCache/DDC.ddp")
+Pak=(Type=ReadPak, Filename="../../../../../../Users/AK/Documents/Unreal Projects/AnotherGit/DerivedDataCache/DDC.ddp")
 EnginePak=(Type=ReadPak, Filename=../../../Engine/DerivedDataCache/DDC.ddp)
 
 [RocketDerivedDataBackendGraph]
@@ -1675,7 +1680,7 @@ AsyncPut=(Type=AsyncPut, Inner=Hierarchy)
 Hierarchy=(Type=Hierarchical, Inner=Boot, Inner=Pak, Inner=EnginePak, Inner=Local)
 Boot=(Type=Boot, Filename="C:/Users/AK/AppData/Local/UnrealEngine/4.4/DerivedDataCache/Boot.ddc", MaxCacheSize=512)
 Local=(Type=FileSystem, ReadOnly=false, Clean=false, Flush=false, PurgeTransient=true, DeleteUnused=true, UnusedFileAge=34, FoldersToClean=-1, Path="C:/Users/AK/AppData/Local/UnrealEngine/4.4/DerivedDataCache")
-Pak=(Type=ReadPak, Filename="../../../../../../Users/AK/Documents/unreal projects/anothergit/DerivedDataCache/DDC.ddp")
+Pak=(Type=ReadPak, Filename="../../../../../../Users/AK/Documents/Unreal Projects/AnotherGit/DerivedDataCache/DDC.ddp")
 EnginePak=(Type=ReadPak, Filename=../../../Engine/DerivedDataCache/DDC.ddp)
 
 [NoShared]
@@ -1683,41 +1688,41 @@ MinimumDaysToKeepFile=7
 Root=(Type=KeyLength, Length=120, Inner=AsyncPut)
 AsyncPut=(Type=AsyncPut, Inner=Hierarchy)
 Hierarchy=(Type=Hierarchical, Inner=Boot, Inner=Pak, Inner=Local)
-Boot=(Type=Boot, Filename="../../../../../../Users/AK/Documents/unreal projects/anothergit/DerivedDataCache/Boot.ddc", MaxCacheSize=512)
+Boot=(Type=Boot, Filename="../../../../../../Users/AK/Documents/Unreal Projects/AnotherGit/DerivedDataCache/Boot.ddc", MaxCacheSize=512)
 Local=(Type=FileSystem, ReadOnly=false, Clean=false, Flush=false, PurgeTransient=true, DeleteUnused=true, UnusedFileAge=34, FoldersToClean=-1, Path=../../../Engine/DerivedDataCache, EnvPathOverride=UE-LocalDataCachePath)
-Pak=(Type=ReadPak, Filename="../../../../../../Users/AK/Documents/unreal projects/anothergit/DerivedDataCache/DDC.ddp")
+Pak=(Type=ReadPak, Filename="../../../../../../Users/AK/Documents/Unreal Projects/AnotherGit/DerivedDataCache/DDC.ddp")
 
 [CreatePak]
 MinimumDaysToKeepFile=7
 Root=(Type=KeyLength, Length=120, Inner=AsyncPut)
 AsyncPut=(Type=AsyncPut, Inner=Hierarchy)
 Hierarchy=(Type=Hierarchical, Inner=Boot, Inner=PakWrite, Inner=PakRead, Inner=Local, Inner=Shared)
-Boot=(Type=Boot, Filename="../../../../../../Users/AK/Documents/unreal projects/anothergit/DerivedDataCache/Boot.ddc", MaxCacheSize=512)
+Boot=(Type=Boot, Filename="../../../../../../Users/AK/Documents/Unreal Projects/AnotherGit/DerivedDataCache/Boot.ddc", MaxCacheSize=512)
 Local=(Type=FileSystem, ReadOnly=false, Clean=false, Flush=false, PurgeTransient=true, DeleteUnused=true, UnusedFileAge=34, FoldersToClean=-1, Path=../../../Engine/DerivedDataCache)
 Shared=(Type=FileSystem, ReadOnly=false, Clean=false, Flush=false, DeleteUnused=true, UnusedFileAge=23, FoldersToClean=-1, Path=\\epicgames.net\root\UE4DDC, EnvPathOverride=UE-SharedDataCachePath)
 AltShared=(Type=FileSystem, ReadOnly=true, Clean=false, Flush=false, DeleteUnused=true, UnusedFileAge=23, FoldersToClean=-1, Path=\\epicgames.net\root\UE4DDC2, EnvPathOverride=UE-SharedDataCachePath2)
-PakRead=(Type=ReadPak, Filename="../../../../../../Users/AK/Documents/unreal projects/anothergit/DerivedDataCache/DDC.ddp")
-PakWrite=(Type=WritePak, Filename="../../../../../../Users/AK/Documents/unreal projects/anothergit/DerivedDataCache/DDC.ddp")
+PakRead=(Type=ReadPak, Filename="../../../../../../Users/AK/Documents/Unreal Projects/AnotherGit/DerivedDataCache/DDC.ddp")
+PakWrite=(Type=WritePak, Filename="../../../../../../Users/AK/Documents/Unreal Projects/AnotherGit/DerivedDataCache/DDC.ddp")
 
 [CreateSamplePak]
 MinimumDaysToKeepFile=7
 Root=(Type=KeyLength, Length=120, Inner=AsyncPut)
 AsyncPut=(Type=AsyncPut, Inner=Hierarchy)
 Hierarchy=(Type=Hierarchical, Inner=Boot, Inner=EnginePak, Inner=PakWrite, Inner=PakRead, Inner=Local, Inner=Shared)
-Boot=(Type=Boot, Filename="../../../../../../Users/AK/Documents/unreal projects/anothergit/DerivedDataCache/Boot.ddc", MaxCacheSize=512)
+Boot=(Type=Boot, Filename="../../../../../../Users/AK/Documents/Unreal Projects/AnotherGit/DerivedDataCache/Boot.ddc", MaxCacheSize=512)
 Local=(Type=FileSystem, ReadOnly=false, Clean=false, Flush=false, PurgeTransient=true, DeleteUnused=true, UnusedFileAge=34, FoldersToClean=-1, Path=../../../Engine/DerivedDataCache, EnvPathOverride=UE-LocalDataCachePath)
 Shared=(Type=FileSystem, ReadOnly=false, Clean=false, Flush=false, DeleteUnused=true, UnusedFileAge=23, FoldersToClean=-1, Path=\\epicgames.net\root\UE4DDC, EnvPathOverride=UE-SharedDataCachePath)
 AltShared=(Type=FileSystem, ReadOnly=true, Clean=false, Flush=false, DeleteUnused=true, UnusedFileAge=23, FoldersToClean=-1, Path=\\epicgames.net\root\UE4DDC2, EnvPathOverride=UE-SharedDataCachePath2)
 EnginePak=(Type=ReadPak, Filename=../../../Engine/DerivedDataCache/DDC.ddp)
-PakRead=(Type=ReadPak, Filename="../../../../../../Users/AK/Documents/unreal projects/anothergit/DerivedDataCache/DDC.ddp")
-PakWrite=(Type=WritePak, Filename="../../../../../../Users/AK/Documents/unreal projects/anothergit/DerivedDataCache/DDC.ddp")
+PakRead=(Type=ReadPak, Filename="../../../../../../Users/AK/Documents/Unreal Projects/AnotherGit/DerivedDataCache/DDC.ddp")
+PakWrite=(Type=WritePak, Filename="../../../../../../Users/AK/Documents/Unreal Projects/AnotherGit/DerivedDataCache/DDC.ddp")
 
 [CreateRocketPak]
 MinimumDaysToKeepFile=7
 Root=(Type=KeyLength, Length=120, Inner=AsyncPut)
 AsyncPut=(Type=AsyncPut, Inner=Hierarchy)
 Hierarchy=(Type=Hierarchical, Inner=Boot, Inner=PakWrite, Inner=PakRead, Inner=Local, Inner=Shared)
-Boot=(Type=Boot, Filename="../../../../../../Users/AK/Documents/unreal projects/anothergit/DerivedDataCache/Boot.ddc", MaxCacheSize=512)
+Boot=(Type=Boot, Filename="../../../../../../Users/AK/Documents/Unreal Projects/AnotherGit/DerivedDataCache/Boot.ddc", MaxCacheSize=512)
 Local=(Type=FileSystem, ReadOnly=false, Clean=false, Flush=false, PurgeTransient=true, DeleteUnused=true, UnusedFileAge=34, FoldersToClean=-1, Path=../../../Engine/DerivedDataCache, EnvPathOverride=UE-LocalDataCachePath)
 Shared=(Type=FileSystem, ReadOnly=false, Clean=false, Flush=false, DeleteUnused=true, UnusedFileAge=23, FoldersToClean=-1, Path=\\epicgames.net\root\UE4DDC, EnvPathOverride=UE-SharedDataCachePath)
 AltShared=(Type=FileSystem, ReadOnly=true, Clean=false, Flush=false, DeleteUnused=true, UnusedFileAge=23, FoldersToClean=-1, Path=\\epicgames.net\root\UE4DDC2, EnvPathOverride=UE-SharedDataCachePath2)
