--- a/Saved/Config/Windows/EditorLayout.ini
+++ b/Saved/Config/Windows/EditorLayout.ini
@@ -115,6 +115,31 @@ UnrealEd_Layout_v1.3=(\
 					"ForegroundTab": "None",\
 					"Tabs": [\
 						(\
+							"TabId": "ProjectSettings",\
+							"TabState": "ClosedTab"\
+						)\
+					]\
+				)\
+			]\
+		),\
+		(\
+			"SizeCoefficient": 1,\
+			"Type": "Area",\
+			"Orientation": "Orient_Horizontal",\
+			"WindowPlacement": "Placement_Specified",\
+			"WindowPosition_X": 175,\
+			"WindowPosition_Y": 64,\
+			"WindowSize_X": 1000,\
+			"WindowSize_Y": 600,\
+			"bIsMaximized": false,\
+			"Nodes": [\
+				(\
+					"SizeCoefficient": 1,\
+					"Type": "Stack",\
+					"HideTabWell": false,\
+					"ForegroundTab": "None",\
+					"Tabs": [\
+						(\
 							"TabId": "PluginsEditor",\
 							"TabState": "ClosedTab"\
 						)\
