--- a/Saved/Config/Windows/EditorUserSettings.ini
+++ b/Saved/Config/Windows/EditorUserSettings.ini
@@ -372,7 +372,7 @@ CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=40.000 Y=9.000
-WindowSize=X=1350.000 Y=738.000
+WindowSize=X=1360.000 Y=738.000
 InitiallyMaximized=True
 
 [ContentBrowser]
@@ -438,11 +438,46 @@ GameMapsSettings.DefaultMaps=True
 GameMapsSettings.LocalMultiplayer=True
 GameMapsSettings.DefaultModes=True
 GameMapsSettings.GameInstance=True
+Brush.BrushSettings=True
+Brush.Tags=True
+Brush.Actor=True
+Brush.Blueprint=True
+Brush.Layers=True
+DirectionalLight.TransformCommon=True
+DirectionalLight.Light=True
+DirectionalLight.LightShafts=True
+DirectionalLight.Lightmass=True
+DirectionalLight.LightFunction=True
+DirectionalLight.CascadedShadowMaps=True
+DirectionalLight.Rendering=True
+DirectionalLight.Tags=True
+DirectionalLight.Actor=True
+DirectionalLight.Blueprint=True
+DirectionalLight.Layers=True
+DirectionalLight.LOD=True
+Brush.Geometry=True
+Brush.Surface Properties=True
+LightmassPrimitiveSettingsObject.Lightmass=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Input=True
+PlayerStart.Tags=True
+PlayerStart.Actor=True
+PlayerStart.Blueprint=True
+PlayerStart.Layers=True
 
 [MessageLog]
 LastLogListing=EditorErrors
 
 [MRU]
 MRUItem0=C:/Users/AK/Documents/unreal projects/anothergit/Content/kkk.umap
+
+[DetailPropertyExpansion]
+Brush=Object.BrushBuilder.BrushBuilder.Object.BrushSettings 
+
+[PlacementMode]
+RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
+RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
 
 
